<resources>
    <string name="app_name">Found You</string>
    <string name="action_settings">Sair</string>
    <string name="postar">Postar</string>
    <string name="cadastre_se_aqui">Cadastre-se aqui</string>
    <string name="limpar">Limpar</string>
    <string name="logar">Logar</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="label_tela_postar">Publicar no Found You</string>
    <string name="strawberry">Strawberry Inc.</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="cadastro">Cadastro</string>

    <string-array name="Cursos">
        <item>Escolha seu Curso</item>
        <item>Administração/Gestão e Negócios</item>
        <item>Análise e Desenvolvimento de Sistemas/Informática</item>
        <item>Arquitetura e Urbanismo/Construção</item>
        <item>Biomedicina/Saúde</item>
        <item>Ciências Contábeis/Gestão e Negócios</item>
        <item>Cinema e Audiovisual/Comunicação Social</item>
        <item>Comércio Exterior/Portos</item>
        <item>Design/Design</item>
        <item>Direito/Ciências Jurídicas</item>
        <item>Enfermagem/Saúde</item>
        <item>Engenharia/Engenharia</item>
        <item>Engenharia Ambiental/Engenharia</item>
        <item>Engenharia Civil/Engenharia</item>
        <item>Engenharia de Petróleo/Engenharia</item>
        <item>Engenharia de Produção/Engenharia</item>
        <item>Engenharia Mecânica/Engenharia</item>
        <item>Estética e Cosmética/Saúde</item>
        <item>Gastronomia/Hospitalidade</item>
        <item>Geologia/Petróleo Gás e Mineração</item>
        <item>Gestão Ambiental/Gestão e Negócios</item>
        <item>Gestão de Recursos Humanos/Gestão e Negócios</item>
        <item>Gestão Portuária/Portos</item>
        <item>Logística/Portos</item>
        <item>Medicina Veterinária/Veterinária</item>
        <item>Oceanografia/Meio Ambiente</item>
        <item>Pedagogia/Educação</item>
        <item>Processos Gerenciais/Gestão e Negócios</item>
        <item>Psicologia/Saúde</item>
    </string-array>

    <array name="BlocosFacul">
        <item>Adicionar local</item>
        <item>BC</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
        <item>B5</item>
        <item>B6</item>
        <item>B7</item>
        <item>B8</item>
        <item>B9</item>
        <item>B10</item>
        <item>B11</item>
        <item>B12</item>
        <item>Auditório Oziris</item>
        <item>Auditório BC</item>
        <item>Postinho</item>
        <item>Bar do Sujinho</item>
    </array>

    <array name="OpcoesPost">
        <item>Opções</item>
        <item>Deletar</item>
        <item>Editar</item>
        <item>Denunciar</item>
    </array>


</resources>
