<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/fotoPerfil"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription=""/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nomeEdt"
        android:layout_below="@+id/fotoPerfil"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailEdt"
        android:layout_below="@+id/nomeEdt"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/senha"
        android:layout_below="@+id/emailEdt"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cursosSpinner"
        android:layout_below="@+id/senha"
        android:layout_alignStart="@+id/senha"
        android:layout_alignLeft="@+id/senha" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:id="@+id/cadastrarBtn"
        android:layout_below="@+id/cursosSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"/>

</RelativeLayout>
